--- a/formfiller/app/BasicPages/MainPage.css
+++ b/formfiller/app/BasicPages/MainPage.css
@@ -52,6 +52,13 @@
     margin-bottom: 0px;
 }
 
+.create-form{
+    margin-left: 300px;
+    height: 30px;
+    width: 40px;
+    background-color: greenyellow;
+}
+
 .all-groups {
     margin-top: 0px;
     display: flex;
