--- a/formfiller/app/ProfilePages/Profilepage.css
+++ b/formfiller/app/ProfilePages/Profilepage.css
@@ -79,3 +79,34 @@ input{
     height: 52px;
     width: 182px;
 }
+
+.submit{
+    margin-left: 500px;
+    font-size: 24px;
+    height: 52px;
+    width: 182px;
+}
+
+.logout{
+    /* font-size: 22px; */
+    background-color:#e6e4e4 ;
+    height: 52px;
+    width: 182px;
+    margin-top: 25px;
+    /* margin-left: 500px; */
+}
+
+.logout-text{
+    margin-top: 12px;
+    margin-left: 42px;
+    font-size: 24px;
+    font-weight: 600;
+
+}
+
+.bottom{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+
