--- a/formfiller/app/BasicPages/MainPage.css
+++ b/formfiller/app/BasicPages/MainPage.css
@@ -13,11 +13,13 @@
     width: 4%;
     height: 100vh;
     background-color: #D9D9D9; 
+    /* background-color: #b8d3fd; */
 }
 
 .organization{
     width: 339px;
     height: 100vh;
+    /* background-color: #d3e3fd; */
     background-color: #e9e9e9; 
 }
 
