--- a/formfiller/app/Organizations/OrganizationIndividual.css
+++ b/formfiller/app/Organizations/OrganizationIndividual.css
@@ -2,6 +2,7 @@
     height: 46px;
     width: 292px;
     background-color: #D9D9D9;
+    /* background-color: #c0d6fa; */
     display: flex;
     flex-direction: row; /* Change this line */
     align-items: center; /* Adjust this as needed */
