--- a/formfiller/app/ProfilePages/Profilepage.css
+++ b/formfiller/app/ProfilePages/Profilepage.css
@@ -29,7 +29,7 @@ color: #2E80E0;
     width: 682px;
     margin-top: 25px;
     margin-bottom: 20px;
-    background-color: #e6e4e4;
+    background-color: #f2f2f2;
     border: none;
 }
 
@@ -69,7 +69,7 @@ input{
     margin-bottom: 20px;
     height: 33px;
     width: 242px;
-    background-color: #e6e4e4;
+    background-color: #f2f2f2;
     border: none;
 }
 
