--- a/formfiller/app/BasicPages/HomePage.css
+++ b/formfiller/app/BasicPages/HomePage.css
@@ -1,8 +1,8 @@
 
 header{
     background-color: #D9D9D9;
-    padding-bottom: 30px;
-    height: 85px;
+    padding-bottom: 2%;
+    height: 12%;
     overflow: hidden;
 }
 
@@ -17,6 +17,7 @@ header h2 {
     font-family: kadwa;
     font-weight: bold;
     font-size: 36px;
+   
 }
 
 header nav {
