--- a/formfiller/app/BasicPages/HomePage.css
+++ b/formfiller/app/BasicPages/HomePage.css
@@ -1,8 +1,22 @@
-
+.part-1{
+    background-image:  url('/mainpage-background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 750px;
+}
+.part-3{
+    background-image:  url('/homepage-page3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 780px;
+}
 header{
-    background-color: #D9D9D9;
+    /* border-bottom: 1px solid #D1CAF9; */
+    background-color: white;
     padding-bottom: 2%;
-    height: 12%;
+    height: 70px;
     overflow: hidden;
 }
 
@@ -16,7 +30,7 @@ header h2 {
     left: 21px;
     font-family: kadwa;
     font-weight: bold;
-    font-size: 36px;
+    font-size: 28px;
    
 }
 
@@ -48,15 +62,16 @@ header nav li a:hover {
 }
 
 .first-page-text {
-padding-top: 110px;
+padding-top: 190px;
 margin-left: 75px;
 width: 858px;
 }
 
 .second-page-text {
-    margin-top: 600px;
+    margin-top: 200px;
     margin-left: 203px;
    padding-right: 200px;
+  
 }
 .second-page-text ul {
     margin-top: 103px;
@@ -67,18 +82,49 @@ width: 858px;
 padding-left: 10px;
 }
 
+.third-page-text {
+    margin-top: 200px;
+    margin-left: 203px;
+   padding-right: 200px;
+}
+
 .top-text{
  font-family: Inknut Antiqua;
  font-weight: bold;
  font-size: 40px;
 }
 
+.top-text-2{
+    font-family: Inknut Antiqua;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+   }
+
+.top-text-3{
+    padding-top: 100px;
+    font-family: Inknut Antiqua;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+    color: white;
+   }
+
 .normal-text{
-  font-size: 32px;
+  font-size: 28px;
 }
 
 .normal-text-2{
-    font-size: 32px;
+    text-align: center;
+    font-size: 28px;
+    /* text-align: center; */
+}
+.normal-text-3{
+    text-align: center;
+    margin-top: 100px;
+    font-size: 28px;
+    color: white;
+    font-weight: lighter;
     /* text-align: center; */
 }
 
@@ -87,15 +133,16 @@ padding-left: 10px;
 }
 
 footer{
-    margin-top: 200px;
-    color: white;
-    background-color: black;
-    height: 101px;
-    font-size: 24px;
+    /* margin-top: 200px; */
+    color: black;
+    background-color: white;
+    height: 60px;
+    font-size: 20px;
 }
 
 footer h3{
     padding-top: 15px;
+    text-align: center;
 }
 
 
