--- a/formfiller/app/UserAuthPages/LogInPage.css
+++ b/formfiller/app/UserAuthPages/LogInPage.css
@@ -1,7 +1,20 @@
+
+html, body, header {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+.auth-page{
+    background-image:  url('/mainpage-background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+}
 .form-filler-name{
      font-family: kadwa;
      font-weight: bold;
-     font-size: 64px;
+     font-size: 60px;
      padding-right: 35%;
      padding-left: 35%;
      margin-bottom: 10px;
@@ -17,7 +30,7 @@ h3 {
     padding-left: 37%; 
     margin-top: 0;
     padding-top: 0;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 label {
@@ -25,9 +38,9 @@ label {
     flex-direction: column;
     justify-content: flex-start;
     font-weight: 300;
-    font-size: 26px;
+    font-size: 22px;
     padding-right: 26%;
-    padding-left: 26%; 
+    padding-left: 29%; 
     padding-bottom: 1.5%;
 }
 
@@ -35,22 +48,33 @@ label {
     font-size: 24px;
     font-weight: lighter;
     margin-top: 2%;
-    border: none;
-    background-color: #eae8e8;
+    border:  1px solid rgb(113, 113, 113); 
+    background-color: white;
+    border-radius: 5px;
  /* You may need to change the text color for visibility */
-    height: 75px;
-    width: 630px;
+    height: 50px;
+    width: 530px;
+}
+
+form{
+    margin-top:50px;
 }
 
 .submit{
-   font-size: 26px;
-    margin-left: 26%; 
+   font-size: 22px;
+    margin-left: 29%; 
     margin-right: 26%;
-    margin-top: 2%;
+    margin-top: 8%;
     border: none;
-    background-color: #dad8d8;
-    color: #000000; /* You may need to change the text color for visibility */
-    height: 75px;
-    width: 630px;
+    border-radius: 8px;
+    background-color: #555763;
+    color: white; /* You may need to change the text color for visibility */
+    height: 55px;
+    width: 530px;
+    transition: box-shadow 0.3s ease;
    
+}
+
+.submit:active {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5); /* Add box shadow when button is clicked */
 }
