--- a/formfiller/app/AdminPages/AdminMainPage.css
+++ b/formfiller/app/AdminPages/AdminMainPage.css
@@ -1,18 +1,81 @@
+*{
+    background-color:  #F9FBFF;
+}
+
+.admin-mainpage{
+    margin-left: 40px;
+}
+
+.admin-top{
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+    margin-left: 10px;
+}
+
+.admin-top-name{
+    font-size: 28px;
+}
+
+.exit{
+    margin-top: 40px;
+    font-size: 24px;
+    color: #555763;
+}
 
 .member-admin{
+    margin-top: 60px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    gap: 40%;
+   
+}
+
+.form-input{
+    width: 200px;
+    height: 20px;
+    background-color: white;
+    border: 1px solid #646464;
+}
+
+.submit{
+    border: 1px solid #646464;
+    height: 20px;
 }
 
 h2{
     font-weight: 500;
 }
-/* .member{
-    margin-left: 100px;
+.member{
+    border-right: 1px solid #646464;
+    border-top: 1px solid #646464;
+    width: 650px;
+    font-size: 24px;
+    border-radius: 10px;
+    font-size: 16px;
+}
+
+.manage-forms{
+    background-color: #555763;
+    width: 240px;
+    height: 50px;
+    font-size: 22px;
+    color:white;
+    text-align: center;
+    border-radius: 9px;
 }
 
 .admin{
-    margin-left: 100px;
-} */
+    margin-left: 30px;
+    border-radius: 10px;
+    font-size: 16px;
+    /* border: 1px solid #646464;; */
+    border-left: 1px solid #646464;
+    border-top: 1px solid #646464;;
+    width: 650px;
+    height: max-content
+} 
+
+.admin-in{
+    margin-left: 50px;
+}
