--- a/formfiller/app/FormPages/CreateFormPage.css
+++ b/formfiller/app/FormPages/CreateFormPage.css
@@ -1,3 +1,7 @@
+*{
+    background-color:  #F9FBFF;
+}
+
 .create-form-top{
     display: flex;
     flex-direction: row;
@@ -9,7 +13,7 @@
     /* margin-bottom: 0px; */
     margin-left: 20px;
     margin-top:40px;
-    color: #3a93f9;
+    color: #555763;
 }
 
 .create-form-top-create{
@@ -24,32 +28,38 @@ label{
     flex-direction: column;
     justify-content: flex-start;
     font-size: 22px;
-    margin-left: 238px;
+    margin-left: 198px;
     font-weight: 500;
     margin-bottom: 20px;
 }
 
 .form-name{
     width: 632px;
-    height: 42px;
+    height: 40px;
     border: none;
-    background-color: #f2f2f2;
+    background-color: white;
+    border: 1px solid #646464;
+    border-radius: 8px;
     margin-top: 22px;
-   
 }
 
 .json-input{
     border: none;
-    background-color: #f2f2f2;
+    background-color: white;
+    border: 1px solid #646464;
+    border-radius: 8px;
     margin-top: 25px;
     height: 290px;
     width: 1093px;
 }
 
 .submit{
+    background-color: #555763; 
+    color: white;
+    border-radius: 8px;
     margin-left: 35%;
     width: 470px;
-    height: 65px;
+    height: 55px;
     border: none;
     font-size: 22px;
 }
