--- a/formfiller/app/BasicPages/MainPage.css
+++ b/formfiller/app/BasicPages/MainPage.css
@@ -2,31 +2,39 @@
 html,body{
     padding: 0;
     margin: 0;
+  
 }
 .mainpage {
     display: flex;
     align-items: flex-start;
 }
 .profile {
-   height: max-content;
+    height: 45px;
+    width: 45px;
+    border-radius: 5px;
     margin-top: 741px;
     margin-left: 5px;
     margin-bottom: 10px;
+    background-color: black;
     
 }
 .profile-line{
     width: 4%;
     height: 100vh;
-    background-color: #555763; 
-    border-right: 2px solid #FFF;
+    background-color: #e7f0fe;
+    /* border-radius: 8px; */
+    border-radius: 50px;
+    border-right: 1px solid black;
     /* background-color: #b8d3fd; */
 }
 
 .organization{
-    width: 325px;
+    width: 300px;
     height: 100vh;
     /* background-color: #d3e3fd; */
-    background-color: #C8C9CE; 
+    background-color: white; 
+    border-right: 1px solid black;
+    border-radius: 50px;
 }
 
 .organization-top{
@@ -35,7 +43,7 @@ html,body{
     flex-direction: row; /* Change this line */
     align-items: center; /* Adjust this as needed */
     gap: 12vh;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 .organizations-name{
@@ -67,14 +75,14 @@ html,body{
     margin-left: 300px;
     height: 30px;
     width: 40px;
- 
+    color: black;
 }
 
 .admin-page{
     margin-left: 10px;
     height: 30px;
     width: 40px;
-  
+    color: black;
 }
 
 .all-groups {
@@ -83,7 +91,10 @@ html,body{
     flex-direction: row; /* Change this line */
     align-items: center; /* Adjust this as needed */
     gap: 30px;  /* Adjust this as needed */
-    margin-bottom: 0px;
+    margin-bottom: -20px;
+    color: #8e97a3;
+    font-family: sans-serif;
+    cursor: pointer;
 }
 
 h5{
@@ -93,7 +104,7 @@ h5{
 }
 
 .line{
-    margin-top: 0px;
+   margin-bottom: 10px;
     background-color: black;
     height: 1px;
     width: 400px;
@@ -102,4 +113,6 @@ h5{
 
 .selected {
     font-weight: bold;
+    color:  #3e87f5;
+    /* border-bottom: 1px solid #3e87f5; */
 }
