--- a/formfiller/app/FormViews/FormIndividual.css
+++ b/formfiller/app/FormViews/FormIndividual.css
@@ -1,4 +1,24 @@
 h3{
-    margin-left: 20px;
+    /* margin-left: 20px; */
     font-weight: lighter;
+    cursor: pointer;
+}
+
+.doc-icon{
+    margin-left: 20px;
+    height: 60px;
+    width: 20px;
+}
+
+.form-ind{
+    display: flex;
+    flex-direction: row; 
+    gap: 8px;
+    margin-bottom: -10px;
+}
+
+.form-ind:hover {
+    margin-bottom: -10px;
+    /* border-bottom: 1px solid; */
+    margin-left: 20px;
 }
