--- a/formfiller/app/Organizations/OrganizationIndividual.css
+++ b/formfiller/app/Organizations/OrganizationIndividual.css
@@ -1,17 +1,29 @@
 .org-ind{
-    height: 46px;
-    width: 272px;
+    height: 42px;
+    width: 270px;
     color: white;
     background-color: black;
     /* background-color: #c0d6fa; */
     display: flex;
     /* flex-direction: row; /* Change this line */
     align-items: center; 
+    display: flex;
+    flex-direction: row; 
+    gap: 15px;
+    cursor: pointer;
   
     margin-bottom: 10px;
     margin-left: 18px;
-    border-radius: 5px;
+    border-radius: 10px;
 }
+
+.org-icon{
+    margin-left: 10px;
+    height: 40px;
+    width: 20px;
+}
+
+
 
 .org-ind-circle{
     margin-left:10px;
@@ -19,12 +31,13 @@
 }
 
 .org-ind-name{
-    margin-left: 55px;
+    /* margin-left: 15px; */
     font-weight: lighter;
+    font-size: 18px;
 }
 
 .org-ind-org-selected {
-    background-color: white !important;
+    background-color: #3e87f5 !important;
     color: black !important;
     font-weight: bold;
 }
