--- a/formfiller/app/AdminPages/AdminMainPage.css
+++ b/formfiller/app/AdminPages/AdminMainPage.css
@@ -48,8 +48,11 @@ h2{
 }
 .member{
     border-right: 1px solid #646464;
+    border-left: 1px solid #646464;
     border-top: 1px solid #646464;
     width: 650px;
+    padding-left: 10px;
+    margin-right: 30px;
     font-size: 24px;
     border-radius: 10px;
     font-size: 16px;
@@ -67,10 +70,12 @@ h2{
 }
 
 .admin{
-    margin-left: 30px;
+   
     border-radius: 10px;
     font-size: 16px;
+    padding-left: 10px;
     /* border: 1px solid #646464;; */
+    border-right: 1px solid #646464;
     border-left: 1px solid #646464;
     border-top: 1px solid #646464;;
     width: 650px;
@@ -78,5 +83,5 @@ h2{
 } 
 
 .admin-in{
-    margin-left: 50px;
+    margin-left: 20px;
 }
