--- a/formfiller/app/Organizations/SearchOrganization.css
+++ b/formfiller/app/Organizations/SearchOrganization.css
@@ -34,3 +34,17 @@ input{
     margin-top: 50px;
     margin-left: 25px;
 }
+
+.buttons{
+    display: flex;
+    flex-direction: row; 
+}
+
+.exit{
+    font-weight: 500;
+    margin-left: 5px;
+    margin-top: 0px;
+    font-size: 120px;
+    height: 40px;
+    width: 20px;
+}
