--- a/formfiller/app/Organizations/SearchOrganization.css
+++ b/formfiller/app/Organizations/SearchOrganization.css
@@ -4,9 +4,12 @@
     border-radius: 8px;
     width: 213px;
     height: 48px;
-    font-size: 16px;
+    font-size: 18px;
     margin-top: 580px;
     margin-left: 40px;
+    display: flex;
+    align-items: center; /* Vertically center the content */
+    justify-content: center;
 }
 
 label{
