--- a/formfiller/app/Organizations/SearchOrganization.css
+++ b/formfiller/app/Organizations/SearchOrganization.css
@@ -51,3 +51,18 @@ input{
     height: 40px;
     width: 20px;
 }
+
+.joined{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 25px;
+    margin-top: 20px;
+    width: max-content;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    background-color: black;
+    color: green;
+}
