--- a/formfiller/app/AdminPages/AdminMainPage.css
+++ b/formfiller/app/AdminPages/AdminMainPage.css
@@ -15,12 +15,14 @@
 
 .admin-top-name{
     font-size: 28px;
+    font-weight: 600;
 }
 
 .exit{
     margin-top: 40px;
     font-size: 24px;
     color: #555763;
+    cursor: pointer;
 }
 
 .member-admin{
@@ -60,13 +62,16 @@ h2{
 
 .manage-forms{
     background-color: #555763;
-    width: 240px;
+    width: 200px;
     height: 50px;
     font-size: 22px;
     color:white;
-    text-align: center;
-    border-radius: 9px;
+    display: flex;
+    align-items: center;
     justify-content: center;
+    border-radius: 9px;
+    cursor: pointer;
+  
 }
 
 .admin{
@@ -83,5 +88,5 @@ h2{
 } 
 
 .admin-in{
-    margin-left: 20px;
+    margin-left: 10px;
 }
