--- a/formfiller/app/FormPages/CreateFormPage.css
+++ b/formfiller/app/FormPages/CreateFormPage.css
@@ -42,6 +42,15 @@ label{
     border-radius: 8px;
     margin-top: 22px;
 }
+.input-json-top{
+    display: flex;
+    /* gap: 30px; */
+}
+.info-button{
+    height: 25px;
+    width: 45px;
+}
+
 
 .json-input{
     border: none;
