--- a/formfiller/app/AdminPages/AdminMainPage.css
+++ b/formfiller/app/AdminPages/AdminMainPage.css
@@ -1,16 +1,17 @@
 *{
     background-color:  #F9FBFF;
+    
 }
 
 .admin-mainpage{
-    margin-left: 40px;
+    margin-left: 70px;
 }
 
 .admin-top{
     display: flex;
     flex-direction: row;
-    gap: 100px;
-    margin-left: 10px;
+    gap: 50px;
+    /* margin-left: 10px; */
 }
 
 .admin-top-name{
@@ -20,7 +21,7 @@
 
 .exit{
     margin-top: 40px;
-    font-size: 24px;
+    font-size: 20px;
     color: #555763;
     cursor: pointer;
 }
@@ -30,33 +31,39 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-   
+    gap: 30px;
 }
 
 .form-input{
     width: 200px;
     height: 20px;
     background-color: white;
-    border: 1px solid #646464;
+    border: 1px solid gray;
+    border-radius: 4px;
 }
 
 .submit{
     border: 1px solid #646464;
-    height: 20px;
+    height: 25px;
 }
 
 h2{
     font-weight: 500;
 }
+
+/* h1{
+    font-weight: 500;
+} */
 .member{
-    border-right: 1px solid #646464;
-    border-left: 1px solid #646464;
-    border-top: 1px solid #646464;
-    width: 650px;
+   
+    border: 1px solid rgb(160, 157, 157);;
+    border-right:1px solid  gainsboro;
+    border-bottom: none;
+    width: 550px;
     padding-left: 10px;
     margin-right: 30px;
     font-size: 24px;
-    border-radius: 10px;
+    /* border-radius: 20px; */
     font-size: 16px;
 }
 
@@ -75,18 +82,32 @@ h2{
 }
 
 .admin{
-   
-    border-radius: 10px;
+    /* border-radius: 20px; */
     font-size: 16px;
     padding-left: 10px;
     /* border: 1px solid #646464;; */
-    border-right: 1px solid #646464;
-    border-left: 1px solid #646464;
-    border-top: 1px solid #646464;;
-    width: 650px;
+    border-right: 1px solid rgb(160, 157, 157);
+    border-left: 1px solid gainsboro;
+    border-top: 1px solid rgb(160, 157, 157);
+    width: 550px;
     height: max-content
 } 
 
 .admin-in{
     margin-left: 10px;
+}
+
+.manage{
+    margin-top: 40px;
+    margin-left: 55%;
+}
+
+.manage-icon{
+    height: 30px;
+    width: 80px;
+    margin-bottom: 0px;
+}
+
+.manage-text{
+    margin-top: 0px;
 }
