--- a/formfiller/app/AdminPages/AdminManageForms.css
+++ b/formfiller/app/AdminPages/AdminManageForms.css
@@ -1,7 +1,16 @@
 *{
-    margin-top: 10%;
-    margin-left: 10%;
-    display: flex;
-flex-direction: column;
-justify-content: flex-start;
+    /* margin-top: 10%;
+    margin-left: 10%; */
+    /* display: flex;
+    flex-direction: column;
+    justify-content: flex-start; */
+    background-color:  #F9FBFF;
+    font-weight: lighter;
+}
+
+.forms{
+    font-weight: lighter;
+    font-style: normal;
+    margin-left: 60px;
+    /* font-family: sans-serif; */
 }
