--- a/formfiller/app/Organizations/SearchOrganization.css
+++ b/formfiller/app/Organizations/SearchOrganization.css
@@ -63,7 +63,8 @@ input{
     border-radius: 10px;
     font-size: 18px;
     font-weight: 500;
-    background-color: black;
+    border: 1px solid black;
+    background-color: white;
     color: green;
 }
 
