--- a/formfiller/app/AdminPages/AdminFormIndividual.css
+++ b/formfiller/app/AdminPages/AdminFormIndividual.css
@@ -2,7 +2,16 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin-bottom: 1%;
+    /* border-radius: 8px; */
+    /* border-bottom: 1px solid gray; */
+    /* border: 1px solid gray; */
+    /* font-family: sans-serif; */
+}
+.dot{
+    height: 35px;
+    width: 35px;
+    margin-top: 15px;
+    color: rgb(125, 177, 246);
 }
 
 .assigned{
