--- a/formfiller/app/AdminPages/AdminManageForms.css
+++ b/formfiller/app/AdminPages/AdminManageForms.css
@@ -4,13 +4,37 @@
     /* display: flex;
     flex-direction: column;
     justify-content: flex-start; */
-    background-color:  #F9FBFF;
+  
     font-weight: lighter;
 }
 
+.top{
+    background-color:  #F9FBFF;
+    display: flex;
+    gap: 50px;
+    margin-bottom: 20px;
+}
+
+.top-text{
+    
+    margin-top: 15px;
+    font-weight: bold;
+    font-size: 30px;
+}
+
 .forms{
+    height: 700px;
+    background-color: black;
+    border-radius: 30px;
+    
+    color: white;
     font-weight: lighter;
     font-style: normal;
     margin-left: 60px;
     /* font-family: sans-serif; */
+}
+
+.form-ind{
+    border-radius: 6px;
+    border: 1px solid gray;
 }
