--- a/formfiller/app/AdminPages/AdminMainPage.css
+++ b/formfiller/app/AdminPages/AdminMainPage.css
@@ -1,13 +1,9 @@
-*{
-    background-color:  #F9FBFF;
-    
-}
-
 .admin-mainpage{
     margin-left: 70px;
 }
 
 .admin-top{
+    background-color:  #F9FBFF;
     display: flex;
     flex-direction: row;
     gap: 50px;
@@ -43,8 +39,9 @@
 }
 
 .submit{
-    border: 1px solid #646464;
-    height: 25px;
+    border-radius:4px;
+    /* border: 1px solid #646464; */
+    height: 26px;
 }
 
 h2{
@@ -56,8 +53,9 @@ h2{
 } */
 .member{
    
-    border: 1px solid rgb(160, 157, 157);;
-    border-right:1px solid  gainsboro;
+    /* border: 1px solid rgb(160, 157, 157);;
+    border-right:1px solid  gainsboro; */
+    border-radius: 30px;
     border-bottom: none;
     width: 550px;
     padding-left: 10px;
@@ -65,6 +63,9 @@ h2{
     font-size: 24px;
     /* border-radius: 20px; */
     font-size: 16px;
+    background-color: black;
+    color: white;
+    height: 600px;
 }
 
 .manage-forms{
@@ -83,23 +84,33 @@ h2{
 
 .admin{
     /* border-radius: 20px; */
+    border-radius: 30px;
     font-size: 16px;
     padding-left: 10px;
     /* border: 1px solid #646464;; */
-    border-right: 1px solid rgb(160, 157, 157);
-    border-left: 1px solid gainsboro;
-    border-top: 1px solid rgb(160, 157, 157);
+    background-color: black;
+    color: white;
     width: 550px;
-    height: max-content
+ 
+    height: 600px;
 } 
 
 .admin-in{
     margin-left: 10px;
 }
+.dot{
+    height: 30px;
+    width: 30px;
+    margin-top: 20px;
+    color: rgb(125, 177, 246);
+}
 
 .manage{
     margin-top: 40px;
     margin-left: 55%;
+}
+.admin-text{
+    display: flex;
 }
 
 .manage-icon{
