--- a/formfiller/app/AdminPages/FormResponses.css
+++ b/formfiller/app/AdminPages/FormResponses.css
@@ -9,6 +9,11 @@
     padding: 2%;
 }
 
+.exit{
+    font-weight: lighter;
+    margin-top: 30px;
+}
+
 pre{
     background-color: rgb(208, 208, 208);
     /* background-color: #F9FBFF; */
@@ -18,4 +23,9 @@ pre{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+}
+
+.top{
+    display: flex;
+    gap: 30px;
 }
