small design changes to adminpages (spacing)

--- a/formfiller/app/AdminPages/AdminManageForms.css
+++ b/formfiller/app/AdminPages/AdminManageForms.css
@@ -26,7 +26,7 @@
     height: 700px;
     background-color: black;
     border-radius: 30px;
-    
+    padding-left: 10px;
     color: white;
     font-weight: lighter;
     font-style: normal;
