--- a/formfiller/app/AdminPages/AdminFormIndividual.css
+++ b/formfiller/app/AdminPages/AdminFormIndividual.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    margin-top: -10px;
     /* border-radius: 8px; */
     /* border-bottom: 1px solid gray; */
     /* border: 1px solid gray; */
