--- a/formfiller/app/AdminPages/FormResponses.css
+++ b/formfiller/app/AdminPages/FormResponses.css
@@ -2,12 +2,32 @@
     background-color:  #F9FBFF;
 }
 
-.json-text{
+.json-text {
     height: 70%;
-    width:80%;
+    width: 600px;
     background-color: rgb(208, 208, 208);
     padding: 2%;
 }
+
+.json-text pre {
+    white-space: pre-wrap; /* Preserve whitespace and allow wrapping */
+}
+
+.group-container {
+    display: grid;
+    grid-template-columns: auto; /* Adjusted */
+    gap: 20px;
+    margin-left: 60px;
+}
+
+.top {
+    display: flex;
+    gap: 30px;
+}
+
+
+
+
 
 .exit{
     font-weight: lighter;
@@ -19,11 +39,7 @@ pre{
     /* background-color: #F9FBFF; */
 }
 
-.group-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-}
+
 
 .top{
     display: flex;
